--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,3 +17,8 @@ $bg-color:#fff68f to #FBD808;
 .menuContainer{
     border-right: 1px solid #505505;
 }
+.notice{
+    span{
+        border-radius: 50%;
+    }
+}
