--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,11 @@ $bg-color:#fff68f to #FBD808;
 }
 .notice{
     span{
+        height: 23px;
+        width: 18px;
         border-radius: 50%;
+        text-align: center;
+        padding: 2px;
     }
+    
 }
