--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,6 +24,26 @@ $bg-color:#fff68f to #FBD808;
         border-radius: 50%;
         text-align: center;
         padding: 2px;
-    }
+    }  
+}
+a.list-item {
+    margin-left: .5rem;
+    display: flex;
+    gap: 10px;
+    font-size: 16px;
+    width: 100%;
+    padding: 5px
     
+}
+a.img{
+    width: 15px;
+}
+.items:hover{
+    background-color:#505505;
+    width: 100%;
+}
+// Home Page
+.box{
+    border-radius: 5px;
+    border: 1px solid #505505;
 }
